STAR-1826: Fix invalid reuse of metadata collector during flushing
This was causing the cardinality information of an sstable to include
more keys than it actually has, resulting in grossly overestimated
key counts when picking a bloom filter size; the latter resulted in
4-5 times larger bloom filters on L1 than they should be.

(cherry picked from commit b036f2d6210c5ba9f2e0d4651cee209b8e690dd7)
(cherry picked from commit dade7d4227e4233107635aef63dae43bff20930b)